Update and rename marketing-plan-2026 to index.html

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <span class="badge bg-warning text-dark mb-3 px-3 py-2 rounded-pill">مسودة التكلفة التسويقية 2026</span>
             <h1 class="display-4 mb-4">استثمارك الرابح في إيصال الخير</h1>
             <p class="lead text-white-50 mx-auto" style="max-width: 700px;">
-                كفالة تكلفة التسويق هي استثمارٌ في إيصال الخير. الريال المُستثمر في الوصول يبني الجسر بين الباذل والمحتاج، ويعود بأضعاف أثرٍ ونفع.
+                كفالة تكلفة التسويق هي استثمارٌ في إيصال الخير. الريال المُستثمر في الوصول يبني الجسر بين الباذل والمحتاج، ويعود بأضعاف مضاعفة من الأثر والنفع.
             </p>
             
             <div class="d-flex justify-content-center mt-4">
@@ -311,7 +311,7 @@
                         <p class="fs-5 opacity-75">الميزانية تمثل نسبة <span class="fw-bold text-warning">8.42%</span> فقط من إجمالي التبرعات المتوقعة.</p>
                         <ul class="list-unstyled mt-4">
                             <li class="mb-2"><i class="fa-solid fa-check-circle text-success me-2"></i> إجمالي التكلفة: <strong>1,267,000 ريال</strong></li>
-                            <li class="mb-2"><i class="fa-solid fa-check-circle text-success me-2"></i> العائد المتوقع (ROI): <strong>1 : 11.87</strong></li>
+                            <li class="mb-2"><i class="fa-solid fa-check-circle text-success me-2"></i> العائد المتوقع: <strong> 11.87</strong></li>
                         </ul>
                     </div>
                     <div class="col-lg-5 text-center border-start border-light border-opacity-25">
@@ -473,8 +473,10 @@
             <div class="col-lg-8 mx-auto">
                 <h2 class="mb-4 fw-bold">"الدال على الخير كفاعله"</h2>
                 <p class="lead text-muted mb-4">
-                    التبرع بتكلفة التسويق ليس مجرد تمويل، بل هو مساهمة حقيقية في جلب التبرعات. 
-                    كل ريال يُستثمر في هذه الخطة سيعود بفائدة تعم على الكثير من المحتاجين.
+                    الاستثمار في التسويق يترجم إلى نمو حقيقي وأثر ملموس. 
+كل ريال يُستثمر في هذه الخطة سيعود بفائدة تعم على الكثير من المحتاجين والمستفيدين.
+التبرع بتكلفة التسويق لن يكون تمويل فقط ، بل مساهمة حقيقية في جلب التبرعات وكما قال النبي ﷺ :
+"الدال على الخير كفاعله"
                 </p>
                 <button onclick="showDonationModal()" class="btn-cta">
                     <i class="fa-solid fa-hand-holding-dollar ms-2"></i> اكفل خطة التسويق
